2009-10-11 Pierre Wieser <pwieser@trychlos.org>

	* src/nact/nact-iactions-list.c (do_insert_into_first):
	Recursively insert subitems.

	* src/nact/nact-main-menubar.c (on_level_zero_order_changed):
	Connect to new signal to enable save action.

	* src/nact/nact-main-window.c:
	* src/nact/nact-main-window.h:
	Define new signal "main-window-level-zero-order-changed".

	* src/nact/nact-tree-model.c (idrag_dest_drag_data_received):
	Fix drag and drop when reordering items.

2009-10-09 Pierre Wieser <pwieser@trychlos.org>

	* src/nact/nact-iactions-list.c (do_insert_into_first):
	Fix multi-childs insertion.
	Remove useless do_insert_into_second() function.

	* src/nact-main.c (main):
	Only display traces from runtime library when in maintainer mode.

	* src/nact/nact-iactions-list.c:
	* src/nact/nact-iactions-list.h (nact_iactions_list_brief_tree_dump):
	Briefly dump the tree store content.
	(nact_iactions_list_runtime_init_toplevel): Grab the focus at start.
	(on_focus_in, on_focus_out): Track the focus in the treeview.
	Let the label be edited in place.

	* src/nact/nact-iaction-tab.c (on_iactions_list_column_edited):
	* src/nact/nact-icommand-tab.c (on_iactions_list_column_edited):
	New functions.

	* src/nact/nact-main-menubar.c (nact_main_menubar_runtime_init):
	Display a Maintainer menu when in maintainer mode.
	Add BriefTreeStoreDumpItem new item.
	Display a first toolbar.
	(on_save_activated): Also save non-valid items.
	(on_update_sensitivities): Disable edit actions when the focus is
	not in the treeview.

	* src/nact/nact-main-statusbar.c
	(nact_main_statusbar_display_with_timeout):
	Actually put a timeout to pop the status message.

	* src/nact/nact-tree-model.c (nact_tree_model_insert):
	Add debug traces.
	(nact_tree_model_fill): Check validity status at load time.

	* src/nact/nact-window.c (nact_window_save_item):
	Full dump of the saved item.

	* src/nact/nautilus-actions-config-tool.actions:
	Define a placeholder for the Maintainer menu.