@@ -1,3 +1,8 @@
+2009-10-12 Pierre Wieser <pwieser@trychlos.org>
+
+	* src/nact/nact-tree-model.c (drop_inside):
+	Adjust the dest when moving items down.
+
 2009-10-11 Pierre Wieser <pwieser@trychlos.org>
 
 	* src/nact/nact-iactions-list.c (do_insert_into_first):
